[package]
name = "acktel"
version = "0.1.0"
edition = "2021"
description = "Cross-platform Telnet/Rlogin client library and CLI"
repository = "https://github.com/princeofdream/acktel"
license = "MIT OR Apache-2.0"

[[bin]]
name = "acktel"
path = "src/bin/acktel.rs"

[lib]
name = "acktel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { version = "0.29", features = ["term", "signal", "fs"] }
